# auth-service

./: Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml
.github/workflows/: main.yml
docs/: app.js
docs/specs/: auth.swagger.json
docs/swagger-ui/: swagger-initializer.js
proto/: auth.proto
src/: lib.rs  main.rs
src/services/: auth.rs  user.rs
